<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/menu_add_waybill"
          android:title="@string/exit"
          android:orderInCategory="100"
          android:icon="@drawable/ic_add_black_48dp"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_edit_customer"
           android:title="@string/edit_customer"
           android:orderInCategory="100"
           app:showAsAction="never" />

    <item android:id="@+id/menu_edit_waybill"
          android:title="@string/edit_waybill"
          android:orderInCategory="100"
          app:showAsAction="never" />


</menu>