<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">
    <android.support.v7.widget.Toolbar
            android:id="@+id/customer_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/customer_info_last_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="100dp" android:layout_marginLeft="5dp"/>
        <EditText
                android:id="@+id/eLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="50"
                android:inputType="text" android:singleLine="true"/>
    </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/customer_info_first_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="100dp" android:layout_marginLeft="5dp"/>
        <EditText
                android:id="@+id/eFiName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="50"
                android:inputType="text" android:singleLine="true"/>
    </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="0.09">
        <TextView
                android:text="@string/customer_info_middle_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="100dp" android:layout_marginLeft="5dp"/>
        <EditText
                android:id="@+id/eMiddleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="50"
                android:inputType="text" android:singleLine="true"/>
    </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="0.11">
        <TextView
                android:text="@string/customer_info_phone_number"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="100dp" android:layout_marginLeft="5dp"/>
        <EditText
                android:id="@+id/ePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="50"
                android:inputType="phone" android:singleLine="true" android:maxEms="10"/>
    </TableRow>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="set"
            android:id="@+id/btnSet"
            android:text="@string/btn_update"/>

</LinearLayout>